build: wire codec matrix benchmark tasks